Update to JDK21. (#89)
* Update to JDK21.
* Adjust MPIInterface to conform to latest foreign.
* Update documentation.
* Add MPI test in GitHub.
* Work around a spotbugs issue where their packaged ASM doesn’t understand Java21 yet.
* Switch to Oracle JDK for GitHub workflow.